// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav /> should render Get Started page nav correctly 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-spaced is-transparent is-absolute"
  role="navigation"
>
  <div
    className="container"
  >
    <div
      className="navbar-brand"
    >
      <a
        aria-label="home page"
        className="navbar-item"
        href="/"
        onClick={[Function]}
      >
        <svg
          height="36"
          viewBox="0 0 117.31758 135.46667"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m 58.658792,6.7627869 52.802038,30.4852731 0,60.970543 L 58.658789,128.70387 5.8567507,98.2186 l 1.7e-6,-60.970543 z"
            fill="none"
            stroke="#daa520"
            strokeWidth="12"
          />
        </svg>
         
        <span>
          Hive
          <sup>
            io
          </sup>
        </span>
      </a>
      <div
        className="navbar-burger"
        onClick={[Function]}
      >
        <span />
        <span />
        <span />
      </div>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <div
          className="navbar-item has-dropdown is-hoverable"
        >
          <a
            aria-current={null}
            className="navbar-link"
            href="/overview"
            onClick={[Function]}
          >
            Overview
          </a>
          <div
            className="navbar-dropdown is-boxed"
          >
            <a
              aria-current={null}
              className="navbar-item"
              href="/model"
              onClick={[Function]}
            >
              Data Model
            </a>
            <a
              aria-current={null}
              className="navbar-item"
              href="/domain"
              onClick={[Function]}
            >
              Domain Logic
            </a>
            <a
              aria-current={null}
              className="navbar-item"
              href="/infrastructure"
              onClick={[Function]}
            >
              Infrastructure
            </a>
          </div>
        </div>
        <div
          className="navbar-item has-dropdown is-hoverable"
        >
          <a
            aria-current="page"
            className="navbar-link is-active"
            href="/start"
            onClick={[Function]}
            style={Object {}}
          >
            Get Started
          </a>
          <div
            className="navbar-dropdown is-boxed"
          >
            <a
              aria-current={null}
              className="navbar-item"
              href="/setup"
              onClick={[Function]}
            >
              Setup
            </a>
            <hr
              className="navbar-divider"
            />
            <span
              className="navbar-item has-text-weight-bold"
            >
              Examples:
            </span>
            <a
              aria-current={null}
              className="navbar-item"
              href="/basic"
              onClick={[Function]}
            >
              Basic
            </a>
            <a
              aria-current={null}
              className="navbar-item"
              href="/rest"
              onClick={[Function]}
            >
              Rest
            </a>
            <a
              aria-current={null}
              className="navbar-item"
              href="/cqrs-es"
              onClick={[Function]}
            >
              CQRS/ES
            </a>
          </div>
        </div>
        <div
          className="navbar-item has-dropdown is-hoverable"
        >
          <a
            aria-current={null}
            className="navbar-link"
            href="/documentation"
            onClick={[Function]}
          >
            Documentation
          </a>
          <div
            className="navbar-dropdown is-boxed"
          >
            <a
              aria-current={null}
              className="navbar-item"
              href="/environments"
              onClick={[Function]}
            >
              Environments
            </a>
            <a
              className="navbar-item"
              href="https://fnalabs.github.io/hive-js/"
              rel="noopener noreferrer"
              target="_blank"
            >
              API
            </a>
            <hr
              className="navbar-divider"
            />
            <span
              className="navbar-item has-text-weight-bold"
            >
              v2.0.0-rc.3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`<Nav /> should render Overview page nav correctly 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-spaced is-transparent is-absolute"
  role="navigation"
>
  <div
    className="container"
  >
    <div
      className="navbar-brand"
    >
      <a
        aria-label="home page"
        className="navbar-item"
        href="/"
        onClick={[Function]}
      >
        <svg
          height="36"
          viewBox="0 0 117.31758 135.46667"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m 58.658792,6.7627869 52.802038,30.4852731 0,60.970543 L 58.658789,128.70387 5.8567507,98.2186 l 1.7e-6,-60.970543 z"
            fill="none"
            stroke="#daa520"
            strokeWidth="12"
          />
        </svg>
         
        <span>
          Hive
          <sup>
            io
          </sup>
        </span>
      </a>
      <div
        className="navbar-burger"
        onClick={[Function]}
      >
        <span />
        <span />
        <span />
      </div>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <div
          className="navbar-item has-dropdown is-hoverable"
        >
          <a
            aria-current="page"
            className="navbar-link is-active"
            href="/overview"
            onClick={[Function]}
            style={Object {}}
          >
            Overview
          </a>
          <div
            className="navbar-dropdown is-boxed"
          >
            <a
              aria-current={null}
              className="navbar-item"
              href="/model"
              onClick={[Function]}
            >
              Data Model
            </a>
            <a
              aria-current={null}
              className="navbar-item"
              href="/domain"
              onClick={[Function]}
            >
              Domain Logic
            </a>
            <a
              aria-current={null}
              className="navbar-item"
              href="/infrastructure"
              onClick={[Function]}
            >
              Infrastructure
            </a>
          </div>
        </div>
        <div
          className="navbar-item has-dropdown is-hoverable"
        >
          <a
            aria-current={null}
            className="navbar-link"
            href="/start"
            onClick={[Function]}
          >
            Get Started
          </a>
          <div
            className="navbar-dropdown is-boxed"
          >
            <a
              aria-current={null}
              className="navbar-item"
              href="/setup"
              onClick={[Function]}
            >
              Setup
            </a>
            <hr
              className="navbar-divider"
            />
            <span
              className="navbar-item has-text-weight-bold"
            >
              Examples:
            </span>
            <a
              aria-current={null}
              className="navbar-item"
              href="/basic"
              onClick={[Function]}
            >
              Basic
            </a>
            <a
              aria-current={null}
              className="navbar-item"
              href="/rest"
              onClick={[Function]}
            >
              Rest
            </a>
            <a
              aria-current={null}
              className="navbar-item"
              href="/cqrs-es"
              onClick={[Function]}
            >
              CQRS/ES
            </a>
          </div>
        </div>
        <div
          className="navbar-item has-dropdown is-hoverable"
        >
          <a
            aria-current={null}
            className="navbar-link"
            href="/documentation"
            onClick={[Function]}
          >
            Documentation
          </a>
          <div
            className="navbar-dropdown is-boxed"
          >
            <a
              aria-current={null}
              className="navbar-item"
              href="/environments"
              onClick={[Function]}
            >
              Environments
            </a>
            <a
              className="navbar-item"
              href="https://fnalabs.github.io/hive-js/"
              rel="noopener noreferrer"
              target="_blank"
            >
              API
            </a>
            <hr
              className="navbar-divider"
            />
            <span
              className="navbar-item has-text-weight-bold"
            >
              v2.0.0-rc.3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`<Nav /> should render homepage nav correctly 1`] = `
<nav
  aria-label="main navigation"
  className="navbar is-spaced is-transparent is-absolute is-home"
  role="navigation"
>
  <div
    className="container"
  >
    <div
      className="navbar-brand"
    >
      <a
        aria-label="home page"
        className="navbar-item"
        href="/"
        onClick={[Function]}
      >
        <svg
          height="36"
          viewBox="0 0 117.31758 135.46667"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m 58.658792,6.7627869 52.802038,30.4852731 0,60.970543 L 58.658789,128.70387 5.8567507,98.2186 l 1.7e-6,-60.970543 z"
            fill="none"
            stroke="#daa520"
            strokeWidth="12"
          />
        </svg>
         
        <span>
          Hive
          <sup>
            io
          </sup>
        </span>
      </a>
      <div
        className="navbar-burger"
        onClick={[Function]}
      >
        <span />
        <span />
        <span />
      </div>
    </div>
    <div
      className="navbar-menu"
    >
      <div
        className="navbar-end"
      >
        <div
          className="navbar-item has-dropdown is-hoverable"
        >
          <a
            aria-current={null}
            className="navbar-link"
            href="/overview"
            onClick={[Function]}
          >
            Overview
          </a>
          <div
            className="navbar-dropdown is-boxed"
          >
            <a
              aria-current={null}
              className="navbar-item"
              href="/model"
              onClick={[Function]}
            >
              Data Model
            </a>
            <a
              aria-current={null}
              className="navbar-item"
              href="/domain"
              onClick={[Function]}
            >
              Domain Logic
            </a>
            <a
              aria-current={null}
              className="navbar-item"
              href="/infrastructure"
              onClick={[Function]}
            >
              Infrastructure
            </a>
          </div>
        </div>
        <div
          className="navbar-item has-dropdown is-hoverable"
        >
          <a
            aria-current={null}
            className="navbar-link"
            href="/start"
            onClick={[Function]}
          >
            Get Started
          </a>
          <div
            className="navbar-dropdown is-boxed"
          >
            <a
              aria-current={null}
              className="navbar-item"
              href="/setup"
              onClick={[Function]}
            >
              Setup
            </a>
            <hr
              className="navbar-divider"
            />
            <span
              className="navbar-item has-text-weight-bold"
            >
              Examples:
            </span>
            <a
              aria-current={null}
              className="navbar-item"
              href="/basic"
              onClick={[Function]}
            >
              Basic
            </a>
            <a
              aria-current={null}
              className="navbar-item"
              href="/rest"
              onClick={[Function]}
            >
              Rest
            </a>
            <a
              aria-current={null}
              className="navbar-item"
              href="/cqrs-es"
              onClick={[Function]}
            >
              CQRS/ES
            </a>
          </div>
        </div>
        <div
          className="navbar-item has-dropdown is-hoverable"
        >
          <a
            aria-current={null}
            className="navbar-link"
            href="/documentation"
            onClick={[Function]}
          >
            Documentation
          </a>
          <div
            className="navbar-dropdown is-boxed"
          >
            <a
              aria-current={null}
              className="navbar-item"
              href="/environments"
              onClick={[Function]}
            >
              Environments
            </a>
            <a
              className="navbar-item"
              href="https://fnalabs.github.io/hive-js/"
              rel="noopener noreferrer"
              target="_blank"
            >
              API
            </a>
            <hr
              className="navbar-divider"
            />
            <span
              className="navbar-item has-text-weight-bold"
            >
              v2.0.0-rc.3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;
